Add qDup script