@@ -32,6 +32,7 @@
                 <configuration>
                     <source>19</source>
                     <target>19</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
